# brooke

./: .env  .env.example  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/agent/: outbound_agent.py
src/evaluation/: llm_judge.py  rule_based.py  scorer.py
src/failure/: analyzer.py
src/models/: dialogue.py  evaluation.py  scenario.py
src/orchestration/: graph.py
src/scenario/: generator.py
src/simulator/: user_simulator.py
src/ui/: dashboard.py
